--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,6 @@ modules.xml
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
-/mysql
+mysql/*
 
 /.idea
